# todo-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/todo_cli/: __init__.py  cli.py  storage.py
tests/: test_todo.py
