[project]
name = "todo-cli"
version = "0.1.0"
description = "A minimal command-line TODO manager"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
todo = "todo_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
